--- a/Job search app V2/package.json
+++ b/Job search app V2/package.json
@@ -23,6 +23,7 @@
     "jsdom": "^20.0.3",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.4",
     "vitest": "^0.25.3"
