--- a/Job search app V2/package.json
+++ b/Job search app V2/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@testing-library/vue": "^6.6.1",
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vitest/coverage-c8": "^0.25.8",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.2.4",
     "autoprefixer": "^10.4.13",
